--- a/FeedList/app/build.gradle
+++ b/FeedList/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton:butterknife:8.0.0'
+    compile 'com.android.support:design:23.3.0'
 }
