--- a/FeedList/app/build.gradle
+++ b/FeedList/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:8.0.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:cardview-v7:23.2.1'
 }
